Add tabbed navigation to players page
Based on the create team page

--- a/markup/_layouts/_content/players-content.jade
+++ b/markup/_layouts/_content/players-content.jade
@@ -4,111 +4,81 @@ section.nl-section.nl-players
             div.col-md-12
                 h1 PLAYERS
         div.row
-            div.col-md-12
-                div.nl-players-filter-title Filter by lEAgue:
+            div.col-md-12.col-lg-8
+                div.nl-players-filter-title Filter by league:
                 div.nl-players-filter
                     div.row.align-items-center
-                        div.col-md-12
-                            div.owl-carousel.pl-flag
+                        div
+                            ul.country-selector.nav.nav-tabs(role="tablist")
+                                li.nav-item
+                                    a.country-selector__link(data-toggle="tab" href="#usa" role="tab")
+                                        img.haat(src="assets/img/flag/USA.png" alt="USA")
+                                li.nav-item
+                                    a.country-selector__link(data-toggle="tab" href="#spain" role="tab")
+                                        img.haat(src="assets/img/flag/Spain.png" alt="Spain")
+                                li.nav-item
+                                    a.country-selector__link(data-toggle="tab" href="#germany" role="tab")
+                                        img.haat(src="assets/img/flag/Germany.png" alt="Germany")
+                                li.nav-item
+                                    a.country-selector__link(data-toggle="tab" href="#france" role="tab")
+                                        img.haat(src="assets/img/flag/France.png" alt="France")
+
+                div.tab-content
+                    div.tab-pane.fade.show(id="usa" role="tabpanel")
+                        div.nl-players-filter-caruseul
+                            div.nl-players-filter-title Filter by team:
+                            div.owl-carousel.pl-teams
                                 div
                                     button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/USA.png" alt="USA")
+                                        img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
                                 div
                                     button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/Spain.png" alt="Spain")
+                                        img(src="assets/img/emblem/MU.png" alt="MU")
                                 div
                                     button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/Germany.png" alt="Germany")
+                                        img(src="assets/img/emblem/FC.png" alt="FC")
                                 div
                                     button.btn.btn-link(type="button")
-                                        img(src="assets/img/flag/France.png" alt="France")
-                        //div.col-md-7
-                        //    button.btn.btn-primary(type="clear") Reset Filter
-
-
-                div.nl-players-filter-title FILTER by team:
-                div.nl-players-filter-caruseul
-                    div.owl-carousel.pl-teams
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FC.png" alt="FC")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCB.png" alt="FCB")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
-                        div
-                            button.btn.btn-link(type="button")
-                                img(src="assets/img/emblem/MU.png" alt="MU")
-
+                                        img(src="assets/img/emblem/FCB.png" alt="FCB")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/MU.png" alt="MU")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCB.png" alt="FCB")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/MU.png" alt="MU")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FC.png" alt="FC")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCB.png" alt="FCB")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                                div
+                                    button.btn.btn-link(type="button")
+                                        img(src="assets/img/emblem/MU.png" alt="MU")
+                    div.tab-pane.fade(id="spain" role="tabpanel")
+                        div.nl-players-filter-title Filter by team:
+                        div.nl-players-filter-caruseul
+                           p teams spain
+                    div.tab-pane.fade(id="germany" role="tabpanel")
+                        div.nl-players-filter-title Filter by team:
+                        div.nl-players-filter-caruseul
+                            p teams germany
+                    div.tab-pane.fade(id="france" role="tabpanel")
+                        div.nl-players-filter-title Filter by team:
+                        div.nl-players-filter-caruseul
+                            p teams france
 
 
         div.row
