--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -10526,20 +10526,22 @@ p {
   .nl-mob-table #accordion a .row:after {
     display: inline-block;
     content: '+';
-    font-size: 2.25rem;
+    font-size: 2rem;
     font-weight: 700;
     -webkit-transition: all .3s;
     transition: all .3s;
-    width: 2.875rem;
-    height: 2.875rem;
+    width: 2rem;
+    height: 2rem;
     color: #fff;
     background: #e48706;
-    border-radius: 1.4375rem;
+    border-radius: 50%;
     text-align: center;
-    line-height: 2.625rem;
+    line-height: 2rem;
     letter-spacing: 0;
     position: absolute;
-    top: 0.375rem;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
     right: 1.875rem; }
 
 .nl-mob-table #accordion a:not(.collapsed) .row:after {
