--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -10668,7 +10668,7 @@ p {
         border-left: 0; }
 
 .nl-my-teams {
-  background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
+  background: url(../img/stadion_detail.jpg) top center no-repeat fixed;
   background-size: cover;
   color: #121a31;
   padding-bottom: 3.125rem;
