Removed primary classes to warning buttons due to inheritance

--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -110,7 +110,7 @@ section.nl-section.nl-my-teams
                                 div.nl-team-card-footer--left
                                     .nl-team-card-btns
                                         button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
-                                        button.btn.btn-primary.btn-sm.btn-warning Delete
+                                        button.btn.btn-sm.btn-warning Delete
                                 div.nl-team-card-footer--right
                                     .nl-team-card-result
                                         p
@@ -207,7 +207,7 @@ section.nl-section.nl-my-teams
                                 div.nl-team-card-footer--left
                                     .nl-team-card-btns
                                         button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
-                                        button.btn.btn-primary.btn-sm.btn-warning Delete
+                                        button.btn.btn-sm.btn-warning Delete
                                 div.nl-team-card-footer--right
                                     .nl-team-card-result
                                         p
@@ -303,7 +303,7 @@ section.nl-section.nl-my-teams
                                 div.nl-team-card-footer--left
                                     .nl-team-card-btns
                                         button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
-                                        button.btn.btn-primary.btn-sm.btn-warning Delete
+                                        button.btn.btn-sm.btn-warning Delete
                                 div.nl-team-card-footer--right
                                     .nl-team-card-result
                                         p
@@ -399,7 +399,7 @@ section.nl-section.nl-my-teams
                                 div.nl-team-card-footer--left
                                     .nl-team-card-btns
                                         button.btn.btn-primary.btn-sm.nl-m-b-14 Edit
-                                        button.btn.btn-primary.btn-sm.btn-warning Delete
+                                        button.btn.btn-sm.btn-warning Delete
                                 div.nl-team-card-footer--right
                                     .nl-team-card-result
                                         p
