Remove helmet on smaller sizes

--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -31,7 +31,7 @@ section.nl-section.nl-my-teams
                                 p
                                     | Team:
                                     span.title team NLC2
-                                <img src="assets/img/helmet.png" alt="helmet">
+                                <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
 
                     .row
                         .col-12
@@ -128,7 +128,7 @@ section.nl-section.nl-my-teams
                                 p
                                     | Team:
                                     span.title team NLC2
-                                <img src="assets/img/helmet.png" alt="helmet">
+                                <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
                     .row
                         .col-12
@@ -224,7 +224,7 @@ section.nl-section.nl-my-teams
                                 p
                                     | Team:
                                     span.title team NLC2
-                                <img src="assets/img/helmet.png" alt="helmet">
+                                <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
                     .row
                         .col-12
@@ -320,7 +320,7 @@ section.nl-section.nl-my-teams
                                 p
                                     | Team:
                                     span.title team NLC2
-                                <img src="assets/img/helmet.png" alt="helmet">
+                                <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
                     .row
                         .col-12
