--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -972,8 +972,7 @@ section.nl-section.nl-players.nl-create-team
                             .col-12
                                 div.nl-team-card.table-data-field
                                     h3 team NLC2
-                                    <img src="assets/img/helmet.png" alt="helmet">
-
+                                    <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                         .row
                             .col-12
                                 table.table.table-striped
