--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -15,6 +15,17 @@
   }
   td, th {
     padding: 0.5rem;
+
+    &:first-child {
+      text-align: center;
+    }
+    &:last-child {
+      a {
+        display: flex;
+        justify-content: center;
+
+      }
+    }
   }
   td:not(:first-child), .table th:not(:first-child) {
     text-align: left;
