Change table headers

--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -725,9 +725,9 @@ section.nl-section.nl-players.nl-create-team
                                             th.avatar NAME
                                             th SALARY
                                             th FP
+                                            th Status
                                             th POS
                                             th team
-                                            th status
                                             th OPP
                                             th GameDAY
                                             th more
