--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -9239,6 +9239,25 @@ main {
     background-position-y: -100%;
     color: #fff; }
 
+/* Helpers alignment
+---------------------------------------- */
+.aligner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  .aligner-item--top {
+    -ms-flex-item-align: start;
+    align-self: flex-start; }
+  .aligner-item--bottom {
+    -ms-flex-item-align: end;
+    align-self: flex-end; }
+
 h1, h2, h3, h4, h5 {
   font-weight: 700;
   text-transform: uppercase;
