Update field layout

--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -126,10 +126,13 @@
   background-size: contain;
   min-width: 620px;
   min-height: 563px;
+  background-size: 100% 100%;
+
   &.football{
     background: url(../img/football/nl-football-field.png) no-repeat 0 0;
     background-size: contain;
     min-height: 420px;
+    background-size: 100% 100%;
     .nl-player-block{
       img{
         max-width: 77px;
