--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -1,10 +1,9 @@
 section.nl-section.nl-players.nl-contests
     div.container
         div.row.align-items-center
-            div.col-12.col-sm-4.col-md-3.col-xl-2
-                h1 contests
-            div.col-12.col-sm-3.col-md-3.col-xl-3
-                div.nl-contests-search
+            div.heading-search
+                h1.heading-search__header contests
+                div.nl-contests-search.heading-search__search
                     div.input-group
                         input(type="text" class="form-control" placeholder="Search contests")
                         span.input-group-btn
@@ -17,7 +16,7 @@ section.nl-section.nl-players.nl-contests
 
                     ul.nav.nav-tabs(role="tablist")
                         li.nav-item
-                            a.nav-link.active(data-toggle="tab" href="#all" role="tab") Buy in No Limit coin
+                            a.nav-link.active(data-toggle="tab" href="#all" role="tab") NLC2
                         li.nav-item
                             a.nav-link(data-toggle="tab" href="#gk" role="tab") Free
                         li.nav-item
