--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -49,13 +49,15 @@ header.nl-header-log
 
                         div.collapse.navbar-collapse(id="navbarSupportedContent")
                             ul.navbar-nav.mr-auto
+                                li.nav-item
+                                    a.nav-link
                                 li.nav-item.dropdown
                                     a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") <span>Sport</span> <img src="assets/img/ball.png" alt="#">
                                     div.dropdown-menu(aria-labelledby="dropdownMenuLink")
-                                        a.dropdown-item(href="#") <span>Soccer</span> <img src="assets/img/ball.png" alt="#">
-                                        a.dropdown-item(href="#") <span>Football</span> <img src="assets/img/ball.png" alt="#">
-                                        a.dropdown-item(href="#") <span>Baseball</span> <img src="assets/img/ball.png" alt="#">
-                                        a.dropdown-item(href="#") <span>Tennis</span> <img src="assets/img/ball.png" alt="#">
+                                        a.dropdown-item(href="#") <span>Soccer</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
+                                        a.dropdown-item(href="#") <span>Football</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
+                                        a.dropdown-item(href="#") <span>Baseball</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
+                                        a.dropdown-item(href="#") <span>Tennis</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img">
 
                                 li.nav-item
                                     a.nav-link(href="#") HOME
