footer charity button

--- a/markup/_layouts/_partials/footer-log.jade
+++ b/markup/_layouts/_partials/footer-log.jade
@@ -12,6 +12,8 @@ footer.nl-footer
                         <i class="fa fa-youtube-play" aria-hidden="true"></i>
                     a(href="#")
                         <i class="fa fa-instagram" aria-hidden="true"></i>
+                    a.btn.btn-charity
+                        span Charity<br>Projects
                 p <br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br />
             div.col-lg-4.nl-tar
                 div.input-group-btn
