--- a/markup/_layouts/_content/players-content.jade
+++ b/markup/_layouts/_content/players-content.jade
@@ -1,5 +1,5 @@
 section.nl-section.nl-players
-    div.container
+    div.container.container-narrow
         div.row
             div.col-md-12
                 h1 PLAYERS
@@ -85,10 +85,10 @@ section.nl-section.nl-players
             div.col-md-12
                 div.nl-players-table
                     div.nl-players-table-data-field
-                        div.nl-data--avatar
+                        div.nl-data--avatar.hidden-sm-down
                             <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
 
-                        div.nl-data--text.nl-m-r-80
+                        div.nl-data--text.nl-m-r-80.hidden-sm-down
                             p.title Cristiano Ronaldo
                             p team : Real Madrid
                             p position: A
